# stock-system

./: .gitignore  DEV_CHECKLIST.md  FEATURES.md  HANDOFF.md  PROJECT.md  README.md  StrategyExecutionService.java.backup.20260313_094632  strategy.yml  strategy.yml.backup.20260313_094632
apps/stock-web-backend/: pom.xml
apps/stock-web-backend/src/main/resources/: application.properties  schema.sql
apps/stock-web-frontend/: index.html  package-lock.json  package.json
apps/stock-web-frontend/src/: App.vue  api.js  router.js
apps/stock-web-frontend/src/components/: CandidatesTable.vue  DataTable.vue  ScoreBar.vue
apps/stock-web-frontend/src/views/: Account.vue  Dashboard.vue  Login.vue  Matching.vue  Orders.vue  Register.vue  Status.vue  SymbolDetail.vue  Symbols.vue  Trades.vue
services/stock-pipeline/: .gitignore  README.md  cron.heartbeat  cron.stock-pipeline  pyproject.toml
services/stock-pipeline/migrations/: 001_init.sql
services/stock-pipeline/src/stock_pipeline/: cli.py  config.py  db.py  ingest.py  minute_ingest.py  providers.py  scheduler.py  watchlist.py
services/stock-research/: .env.example  README.md  cron.stock-research  pyproject.toml
services/stock-research/src/stock_research/: analytics.py  candidates.py  candidates_rank.py  candidates_sql.py  cli.py  cli_scores.py  config.py  db.py  repository.py  scores.py  service.py  sql.py
services/stock-research/src/stock_research.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
services/stock-research/systemd/: stock-research-catchup.service
(+79 files in other folders)
